feat: Implement plan

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,41 +1,19 @@
-# =============================================================================
-# Environment Configuration
-# =============================================================================
-# Copy this file to .env and fill in your values
-# NEVER commit your .env file to version control
-# =============================================================================
+# Twilio Configuration
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_SMS_PHONE_NUMBER=+1XXXXXXXXXX
+TWILIO_VOICE_PHONE_NUMBER=+1XXXXXXXXXX
 
-# -----------------------------------------------------------------------------
-# Application Settings
-# -----------------------------------------------------------------------------
-NODE_ENV=development
-PORT=3000
-LOG_LEVEL=info
-
-# -----------------------------------------------------------------------------
-# Twilio Configuration (SMS & Voice)
-# https://console.twilio.com/
-# -----------------------------------------------------------------------------
-TWILIO_ACCOUNT_SID=your_account_sid_here
-TWILIO_AUTH_TOKEN=your_auth_token_here
-TWILIO_PHONE_NUMBER=+1234567890
-
-# -----------------------------------------------------------------------------
-# ElevenLabs Configuration (Voice Synthesis)
-# https://elevenlabs.io/app/settings/api-keys
-# -----------------------------------------------------------------------------
-ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
-
-# -----------------------------------------------------------------------------
-# LiveKit Configuration (Real-time Communication)
-# https://cloud.livekit.io/
-# -----------------------------------------------------------------------------
+# LiveKit Configuration
 LIVEKIT_URL=wss://your-project.livekit.cloud
-LIVEKIT_API_KEY=your_livekit_api_key_here
-LIVEKIT_API_SECRET=your_livekit_api_secret_here
+LIVEKIT_API_KEY=APIxxxxxxxxxxxxxxx
+LIVEKIT_API_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+SIP_TRUNK_ID=ST_xxxxxxxxxxxxxxxxxxxxxxx
 
-# -----------------------------------------------------------------------------
-# BlackBox AI Configuration (Chat Completions)
-# https://www.blackbox.ai/
-# -----------------------------------------------------------------------------
-BLACKBOXAI_API_KEY=your_blackboxai_api_key_here
+# ElevenLabs Configuration
+ELEVEN_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Blackbox AI Configuration
+BLACKBOX_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Note: No separate LLM API key needed - using LiveKit Inference with Gemini
