feat: Change the Livekit calling method and set OpenAI as the calling provider

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ ELEVEN_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Blackbox AI Configuration
 BLACKBOX_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# OpenAI Configuration
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
