--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "twilio>=9.0.0",
     "livekit>=0.18.0",
-    "livekit-agents>=0.12.0",
+    "livekit-agents[openai]~=1.2",
     "livekit-plugins-elevenlabs>=0.9.0",
     "livekit-plugins-silero>=0.7.0",
     "httpx>=0.27.0",
