feat: Working caller

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
 
 [project.scripts]
 vishing = "vishing.cli:main"
+vishing-worker = "vishing.worker:main"
 
 [build-system]
 requires = ["hatchling"]
